--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ series_note: Beautiful Britain
 subjects:
 - !lcc 'DA'
 - !lcsh 'Channel Islands'
+- GITenberg
 title: The Channel Islands
 url: http://www.gutenberg.org/ebooks/42495
